# xbrl-facts

./: CLAUDE_HANDOFF.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/xbrl-facts-cli/: Cargo.toml
crates/xbrl-facts-cli/src/: main.rs
crates/xbrl-facts-cli/tests/: cli.rs
crates/xbrl-facts-cli/tests/fixtures/: footnote.xbrl  inline.xhtml  minimal.xbrl
crates/xbrl-facts-core/: Cargo.toml
crates/xbrl-facts-core/examples/: bench_real_edinet.rs  bench_throughput.rs
crates/xbrl-facts-core/src/: error.rs  lib.rs  linkbase.rs  parser.rs  types.rs
crates/xbrl-facts-core/tests/: edinet.rs  sec.rs
tests/fixtures/: advanced.xbrl
tests/fixtures/edinet/nippon-beet-sugar-fy2025/: 0000000_header_jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26_ixbrl.htm  0101010_honbun_jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26_ixbrl.htm  0105000_honbun_jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26_ixbrl.htm  0201010_honbun_jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26_ixbrl.htm  jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26.xsd  jpcrp030000-asr-001_E00355-000_2025-03-31_01_2025-06-26_lab.xml
