[package]
name = "xbrl-facts-cli"
description = "Command-line interface for xbrl-facts: parse SEC/EDINET iXBRL filings and export normalized facts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "xbrl-facts"
path = "src/main.rs"

[dependencies]
xbrl-facts-core = { path = "../xbrl-facts-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
